src/styles/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  ::selection {
    @apply bg-brand-100 text-brand-700 dark:bg-brand-950 dark:text-brand-200;
  }

  a {
    @apply hover:text-brand-500 hover:dark:text-brand-400;
  }

  .content h2,
  .content h3,
  .content h4,
  .content h5,
  .content h6 {
    @apply text-brand-500 leading-tight;
  }

  .content h2 {
    @apply text-2xl md:text-3xl;
  }

  .content h3 {
    @apply text-xl md:text-2xl;
  }

  .content h4 {
    @apply text-lg md:text-xl;
  }

  .content h5 {
    @apply text-base md:text-lg;
  }

  .content h6 {
    @apply text-sm md:text-base;
  }

  .content p:first-of-type {
    @apply text-base md:text-xl;
  }

  .content p,
  .content li {
    @apply text-sm md:text-base leading-normal;
  }

  .bg-stripes-fuchsia {
    background-color: #e879f91a;
    background-image: linear-gradient(
      135deg,
      #d946ef80 10%,
      #0000 0,
      #0000 50%,
      #d946ef80 0,
      #d946ef80 60%,
      #0000 0,
      #0000
    );
    background-size: 7.07px 7.07px;
  }

  .bg-stripes-amber {
    background-color: #f59e0b1a;
    background-image: linear-gradient(
      135deg,
      #f59e0b80 10%,
      #0000 0,
      #0000 50%,
      #f59e0b80 0,
      #f59e0b80 60%,
      #0000 0,
      #0000
    );
    background-size: 7.07px 7.07px;
  }

  .bg-stripes-slate {
    background-color: #6c757d80;
    background-image: linear-gradient(
      135deg,
      #6c757d80 10%,
      #0000 0,
      #0000 50%,
      #6c757d80 0,
      #6c757d80 60%,
      #0000 0,
      #0000
    );
    background-size: 7.07px 7.07px;
  }

  /* Code blocks */
  figure[data-rehype-pretty-code-figure] {
    @apply relative;
  }

  figure[data-rehype-pretty-code-figure] pre {
    @apply p-2 md:p-4 mb-5 rounded-lg overflow-x-auto border border-brand-200;
  }

  html.dark figure[data-rehype-pretty-code-figure] pre {
    @apply bg-secondary-950 border-secondary-950;
  }

  [data-highlighted-line] {
    background: rgba(255, 234, 200, 0.07);
  }

  [data-highlighted-chars] {
    @apply bg-zinc-600/50 rounded;
    box-shadow: 0 0 0 4px rgb(255, 234, 200 / 0.5);
  }

  [data-chars-id] {
    border-bottom-width: 2px;
    padding: 0.25rem;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  }

  [data-chars-id] {
    @apply shadow-none p-1 border-b-2;
  }

  [data-chars-id] span {
    @apply !text-inherit;
  }

  [data-chars-id="a"] {
    @apply !text-pink-300 bg-rose-800/50 border-b-pink-600 font-bold;
  }

  [data-chars-id="b"] {
    @apply !text-yellow-300 bg-yellow-800/50 border-b-yellow-600 font-bold;
  }

  [data-chars-id="c"] {
    @apply !text-purple-200 bg-purple-800/50 border-b-purple-600 font-bold;
  }

  [data-rehype-pretty-code-title] {
    @apply bg-zinc-700 text-zinc-200 rounded-t-lg py-2 px-3 font-semibold text-sm;
  }

  figcaption + pre {
    @apply !rounded-t-none;
  }

  /* Diff notatation */
  pre.has-diff code .diff {
    position: relative;
    transition: background-color 0.5s;
    margin: 0 -24px;
    padding: 0 24px;
    width: calc(100% + 48px);
    display: inline-block;
  }

  pre.has-diff code .diff.remove {
    @apply bg-red-500/20;
  }

  pre.has-diff code .diff.add {
    @apply bg-green-500/20;
  }

  pre.has-diff code .diff:before {
    position: absolute;
    left: 10px;
  }

  pre.has-diff code .diff.add:before {
    content: "+";
    @apply text-green-500;
  }

  pre.has-diff code .diff.remove:before {
    content: "-";
    @apply text-red-500;
  }

  /* Dark/Light mode */
  html.dark code[data-theme*=" "],
  html.dark code[data-theme*=" "] span {
    @apply bg-transparent;
    color: var(--shiki-dark);
  }

  code[data-theme*=" "],
  code[data-theme*=" "] span {
    @apply bg-transparent;
    color: var(--shiki-light);
  }
}

code[data-language] {
  font-size: 0.75rem;
  @apply relative md:text-sm;
}

.language-tag {
  /* Add any additional styling you need */
  @apply px-2 text-sm text-gray-500 font-semibold text-end absolute top-0 right-0 uppercase;
  transform: translateY(-24px);
}

.language-tag.bash {
  @apply text-green-500;
}

.language-tag.typescript,
.language-tag.javascript,
.language-tag.js,
.language-tag.jsx,
.language-tag.tsx {
  @apply text-blue-500;
}

.language-tag.gherkin {
  @apply text-yellow-500;
}

.language-tag.css {
  @apply text-pink-500;
}

.language-tag.html {
  @apply text-orange-500;
}

